# DeepAgentCoder

./: .gitignore  README.md  pyproject.toml  requirements.txt
apps/app_01_minimal/: README.md  main.py
apps/app_02_tools_fs/: README.md  main.py
apps/app_03_tests/: README.md  main.py
apps/app_04_final_cli/: README.md  main.py
docs/: deployment.md  verification.md
examples/: hanoi.py  hanoi2.html  hanoi2bug.html
